--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
   "keywords": [],
-  "author": "",
+  "author": "JHAHN",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -20,21 +21,22 @@
     "html-webpack-plugin": "^2.29.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^20.0.4",
-    "webpack": "^3.3.0"
-  },
-  "dependencies": {
+    "webpack": "^3.3.0",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
     "loglevel": "^1.4.1",
     "path": "^0.12.7",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react-motion-ui-pack": "^0.10.3",
     "react-redux": "^5.0.5",
     "react-test-renderer": "^15.6.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.18.2",
     "webpack-dev-server": "^2.5.1"
+  },
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   },
   "jest": {
     "moduleNameMapper": {
